# jellyfish-classification

./: .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml
notebooks/: 01_data_exploration.ipynb  02_data_preprocessing.ipynb
src/jellyfish_classif/config/: __init__.py  config.yaml  parser.py  schema.py
src/jellyfish_classif/data_ingestion/: __init__.py  api.py  main.py  observation.py  utils.py
src/jellyfish_classif/pipeline/: dataset.py  utils.py
src/jellyfish_classif/preprocessing/: dataset.py
src/jellyfish_classif/training/: model_factory.py  trainer.py
