[project]
name = "jellyfish-classif"
version = "0.1.0"
description = "Jellyfish species classification using deep learning."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter==1.1.1",
    "matplotlib==3.10.7",
    "opencv-python==4.12.0.88",
    "pandas==2.3.3",
    "requests==2.32.5",
    "scikit-learn==1.7.2",
    "tensorflow[and-cuda]==2.20.0",
    "tqdm==4.67.1",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
]
